corrected visibility checkbox buttons

--- a/frontend/src/app/core/component/graph-table/graph-table.component.css
+++ b/frontend/src/app/core/component/graph-table/graph-table.component.css
@@ -3,6 +3,14 @@
     margin-right: 16px !important;
 }
 
+.dropdown-menu-options {
+  width: 200px;
+}
+
+.dropdown-menu-datasource {
+  width: 300px;
+}
+
 .dropshadow {
   -webkit-box-shadow: -5px 4px 12px 0px rgba(0,0,0,0.46);
   -moz-box-shadow: -5px 4px 12px 0px rgba(0,0,0,0.46);
